[package]
name = "teleapp_auth"
version = "1.1.0"
edition = "2021"
description = "🚀 A Rust-based Python package for validating Telegram WebApp authorization."

[lib]
name = "teleapp_auth"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.3"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
serde = { version = "1.0.210", features = ["derive"] }