[project]
name = "teleapp-auth"
requires-python = ">=3.9.0"
authors = [{name="vffuunnyy", email="vffuunnyy@gmail.com"}]
dynamic = ["version"]
description = "Telegram authentication library"
license = "MIT"
readme = "README.md"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
